<resources>
    <string name="app_name" translatable="false">Attendance Pro</string>
    <string name="mark_attn">Mark Attendance</string>
    <string name="attn_summ">Attendance Summary</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="payslip">View Payslips</string>
    <string name="submit">Submit</string>
    <string name="attn_code">Attendance Code</string>
    <string name="loginTitle">Log into System</string>
    <string name="login">Login</string>
    <string name="apply4leave">Apply for Leave</string>
    <string name="reqOthers">Request Others</string>
    <string name="repProblem">Report a Problem</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="month">Month</string>
    <string name="attnRate">Attendance Rate</string>
    <string name="leaves">Leaves</string>
    <string name="annualLeaves">Annual Leaves</string>
    <string name="MCs">Medical Certificates</string>
    <string name="email">Email</string>
    <string name="pinNumber">Pin Number</string>
    <string name="loginActivityPrompt">Login to Attendance Tracker</string>
    <string name="notifications">Notifications</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="userOptions">User Options</string>
    <string name="navigationDrawerOpen">Open Navigation Drawer</string>
    <string name="navigationDrawerClose">Close Navigation Drawer</string>
    <string name="typeOfLeave">Type of Leave</string>
    <string name="childcareLeave">Childcare Leave</string>
    <string name="medicalLeave">Medical Leave</string>
<<<<<<< Updated upstream
    <string name="paternityLeave">Parental Leave</string>
    <string name="annualLeave">Annual Leave</string>
    <string name="emergencyLeave">Emergency Leave</string>
=======
    <string name="paternityLeave">Paternity Leave</string>
    <string name="annualLeave">Annual Leave</string>
    <string name="emergencyLeave">Emergency Leave</string>
    <string name="typeOfLeave">Type of Leave</string>
>>>>>>> Stashed changes
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="details">Details</string>
    
    <string-array name="leaveTypeArray">
        <item>@string/childcareLeave</item>
        <item>@string/medicalLeave</item>
        <item>@string/paternityLeave</item>
        <item>@string/annualLeave</item>
        <item>@string/emergencyLeave</item>
    </string-array>
</resources>
